<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>work.ganglia</groupId>
  <artifactId>ganglia-parent</artifactId>
  <version>0.1.7-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>ganglia-harness</module>
    <module>ganglia-local-file-memory</module>
    <module>ganglia-coding</module>
    <module>ganglia-web</module>
    <module>ganglia-terminal</module>
    <module>integration-test</module>
    <module>ganglia-example</module>
    <module>ganglia-swe-bench</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <vertx.version>5.0.6</vertx.version>
    <junit-jupiter.version>5.11.4</junit-jupiter.version>
    <slf4j.version>2.0.16</slf4j.version>
    <log4j.version>2.25.3</log4j.version>
    <commonmark.version>0.27.1</commonmark.version>
    <jackson.version>2.18.2</jackson.version>
    <spotless.version>2.44.3</spotless.version>
    <checkstyle.version>3.6.0</checkstyle.version>
    <spotbugs.version>4.9.1.0</spotbugs.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-yaml</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>org.commonmark</groupId>
        <artifactId>commonmark</artifactId>
        <version>${commonmark.version}</version>
      </dependency>
      <dependency>
        <groupId>org.commonmark</groupId>
        <artifactId>commonmark-ext-gfm-tables</artifactId>
        <version>${commonmark.version}</version>
      </dependency>
      <dependency>
        <groupId>work.ganglia</groupId>
        <artifactId>ganglia-harness</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>work.ganglia</groupId>
        <artifactId>ganglia-local-file-memory</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>work.ganglia</groupId>
        <artifactId>ganglia-coding</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>work.ganglia</groupId>
        <artifactId>ganglia-terminal</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>work.ganglia</groupId>
        <artifactId>ganglia-example</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j2-impl</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-core</artifactId>
        <version>${vertx.version}</version>
      </dependency>
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-web-client</artifactId>
        <version>${vertx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit-jupiter.version}</version>
      </dependency>
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-junit5</artifactId>
        <version>${vertx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>5.15.2</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-junit-jupiter</artifactId>
        <version>5.15.2</version>
      </dependency>
      <dependency>
        <groupId>com.google.jimfs</groupId>
        <artifactId>jimfs</artifactId>
        <version>1.3.1</version>
      </dependency>
      <dependency>
        <groupId>com.knuddels</groupId>
        <artifactId>jtokkit</artifactId>
        <version>1.1.0</version>
      </dependency>
      <dependency>
        <groupId>com.networknt</groupId>
        <artifactId>json-schema-validator</artifactId>
        <version>1.5.5</version>
      </dependency>
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-stack-depchain</artifactId>
        <version>${vertx.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>3.5.2</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.12</version>
          <executions>
            <execution>
              <id>prepare-agent</id>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <goals>
                <goal>report</goal>
              </goals>
              <phase>test</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <upToDateChecking>
              <enabled>true</enabled>
            </upToDateChecking>
            <java>
              <toggleOffOn/>
              <googleJavaFormat>
                <version>1.25.2</version>
                <style>GOOGLE</style>
              </googleJavaFormat>
              <removeUnusedImports/>
              <importOrder>
                <order>java,javax,org,com,io,work</order>
              </importOrder>
            </java>
            <pom>
              <includes>
                <include>pom.xml</include>
              </includes>
              <sortPom>
                <expandEmptyElements>false</expandEmptyElements>
              </sortPom>
            </pom>
            <markdown>
              <includes>
                <include>**/*.md</include>
              </includes>
              <excludes>
                <exclude>**/node_modules/**</exclude>
                <exclude>**/target/**</exclude>
                <exclude>**/venv/**</exclude>
                <exclude>**/.ganglia/**</exclude>
                <exclude>**/SKILL.md</exclude>
              </excludes>
              <flexmark/>
            </markdown>
            <json>
              <includes>
                <include>**/*.json</include>
              </includes>
              <excludes>
                <exclude>**/node_modules/**</exclude>
                <exclude>**/target/**</exclude>
                <exclude>**/venv/**</exclude>
                <exclude>**/tsconfig*.json</exclude>
                <exclude>**/.ganglia/**</exclude>
              </excludes>
              <jackson/>
            </json>
            <yaml>
              <includes>
                <include>**/*.yml</include>
                <include>**/*.yaml</include>
              </includes>
              <excludes>
                <exclude>**/node_modules/**</exclude>
                <exclude>**/target/**</exclude>
                <exclude>**/venv/**</exclude>
                <exclude>**/.ganglia/**</exclude>
              </excludes>
              <jackson/>
            </yaml>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${checkstyle.version}</version>
          <configuration>
            <configLocation>google_checks.xml</configLocation>
            <suppressionsLocation>config/checkstyle-suppressions.xml</suppressionsLocation>
            <consoleOutput>true</consoleOutput>
            <failsOnError>true</failsOnError>
            <linkXRef>false</linkXRef>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>${spotbugs.version}</version>
          <configuration>
            <effort>Max</effort>
            <threshold>Low</threshold>
            <xmlOutput>true</xmlOutput>
            <excludeFilterFile>config/spotbugs-exclude.xml</excludeFilterFile>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>compile</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>compile</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

</project>
